# mailfren

./: Cargo.toml  README.md  flake.nix
src/: database.rs  errors.rs  main.rs  migrate.rs  routes.rs  schemas.rs
src/migrations/: V1__initial_tables.rs
