[package]
name = "mailfren"
version = "0.1.0"
edition = "2021"
default-run = "mailfren"

[[bin]]
name = "mailfren"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/migrate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
barrel = { version = "0.7.0", features = ["sqlite3"] }
refinery = { version = "0.8.12", features = ["rusqlite"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono"] }
rusqlite = "0.30.0"
chrono = { version = "0.4.34", features = ["serde"] }
serde_json = "1.0.114"
